--- a/index.html
+++ b/index.html
@@ -5,43 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Registration Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <script defer src="js/script.js"></script>
   </head>
   <body>
-    <header>
+    <div class="wrapper">
       <h1>Registration Form</h1>
-    </header>
-    <main>
       <form name="registration">
         <div>
           <label for="first-name">First name</label>
-          <input type="text" id="first-name" name="registration" />
+          <input
+            type="text"
+            id="first-name"
+            class="input-basic"
+            name="registration"
+          />
         </div>
         <div>
           <label for="last-name">Last name</label>
-          <input type="text" id="last-name" name="registration" />
+          <input
+            type="text"
+            id="last-name"
+            class="input-basic"
+            name="registration"
+          />
         </div>
         <div>
           <label for="email">Email</label>
-          <input type="email" id="email" name="registration" />
+          <input
+            type="email"
+            id="email"
+            class="input-basic"
+            name="registration"
+          />
         </div>
-        <div>
+        <div class="invisible">
           <label for="confirm-email">Confirm email</label>
-          <input type="email" id="confirm-email" name="registration" />
+          <input
+            type="email"
+            id="confirm-email"
+            class="input-basic"
+            name="registration"
+          />
         </div>
         <div>
           <label for="password">Password</label>
-          <input type="password" id="password" name="registration" />
+          <input
+            type="password"
+            id="password"
+            class="input-basic"
+            name="registration"
+          />
         </div>
-        <div>
+        <div class="invisible">
           <label for="confirm-password">Confirm password</label>
-          <input type="password" id="confirm-password" name="registration" />
+          <input
+            type="password"
+            id="confirm-password"
+            class="input-basic"
+            name="registration"
+          />
         </div>
-        <button type="submit">Submit</button>
-        <button type="clear">Clear</button>
+        <div class="buttons">
+          <button type="submit">Submit</button>
+          <button type="clear">Clear</button>
+        </div>
       </form>
-    </main>
+    </div>
   </body>
 </html>
